Routing_osp/ver2/svc.yaml
echo "
apiVersion: v1
kind: Service
metadata:
  labels:
    app: routing-osp
  name: request-transformer-svc
spec:
  ports:
  - port: 80
    name: port80
    protocol: TCP
    targetPort: 80
" | kubectl apply -f - -n kong
